<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">BillerPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username00288434948</string>
    <string name="nav_header_subtitle">user.email_id@sample.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">लॉगआउट (Logout)</string>

    <string name="menu_entry">व्यवहार नोंद (Transaction Entry)</string>
    <string name="menu_profile">प्रोफाइल (Profile)</string>
    <string name="menu_settings">सेटिंग (Settings)</string>
    <string name="client_name">बारामती नगर परिषद\n MGP Infrastructure Pvt. Ltd.</string>
    <string name="mgp_client_name">MGP Infrastructure Pvt. Ltd.</string>
    <string name="ajspire_tec">© Ajspire Technologies Pvt. Ltd.</string>
    <string name="sync">Sync To Server</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="userId">यूजर आयडी (User id)</string>
    <string name="password">पासवर्ड (Password)</string>
    <string name="action_sign_in">लॉगिन (Login)</string>
    <string name="fee_type">फी प्रकार</string>
    <string name="amount">रक्कम ₹</string>
    <string name="rs_sign">₹</string>

    <string name="user_name">नाव (Name)</string>
    <string name="customer_name">नाव</string>
    <string name="mobile_number">मोबाईल नंबर (Mobile Number)</string>
    <string name="customer_mobile_number">मोबाईल नंबर</string>
    <string name="customer_mobile_number1">मो. नंबर</string>
    <string name="email">ई-मेल आयडी (Email Id)</string>
    <string name="address">पत्ता (Address)</string>
    <string name="submit">जमा (Submit)</string>
    <string name="submit_only">जमा</string>
    <string name="cancel">रद्द</string>
    <string name="loading_message">कृपया काही वेळ प्रतीक्षा करा.\n\nPlease wait from some time.</string>
    <string name="logout_confirm">तुमची खात्री आहे की तुम्ही लॉग आउट करू इच्छिता?\n\nAre you sure you want to log out?</string>
    <string name="logout_yes">होय (Yes)</string>
    <string name="logout_no">नाही (No)</string>

    <string name="user_id_error">कृपया योग्य युजरआयडी टाका.\n\nPlease enter correct userid.</string>
    <string name="password_error">कृपया योग्य पासवर्ड टाका.\n\nPlease enter correct password.</string>
    <string name="login_sucess">अॅपमध्ये तुमचे स्वागत आहे.\n\nUser login successfully.</string>
    <string name="logout_sucess">यशस्वीरित्या लॉगआउट.\n\nLogout successfully.</string>
    <string name="technicale_error">काही तांत्रिक त्रुटी आहे, कृपया काही वेळानंतर पुन्हा प्रयत्न करा.\nThere is some technical error, please try again after some time.</string>
    <string name="fee_type_24">24</string>
    <string name="fee_type_24_48">24-48</string>
    <string name="fee_type_48_72">48-72</string>
    <string name="fee_type_72_100">72-100</string>

    <string name="fee_type_24_amt">20</string>
    <string name="fee_type_24_48_amt">40</string>
    <string name="fee_type_48_72_amt">60</string>
    <string name="fee_type_72_100_amt">80</string>
    <string name="save_sucess_message">माहिती यशस्वीरित्या संग्रहित केली आहे.\n\nInformation has store successfully.</string>
    <string name="close">बंद (Close)</string>
    <string name="keyboard_message">कृपया ग्राहकाच्या नावासाठी मराठी कीबोर्ड वापरा.</string>
    <string name="collection_list">एकूण पेमेंट संकलन</string>
    <string name="collection_list_menu">एकूण पेमेंट संकलन (Collection)</string>
    <string name="collection_summary">पेमेंट संकलन सारांश</string>
    <string name="syn_sucess">सर्व डेटा सर्व्हरवर यशस्वीरित्या अपलोड झाला आहे.\nAll data has uploaded to server successfully.</string>
    <string name="syn_inprogress">डेटा अपलोड चालू आहे.\n कृपया हे पेज किंवा अॅप बंद करू नका.\n\nData upload is inprogress. Please don not close the this page or App.</string>
    <string name="no_payment_collection">आजसाठी कोणतेही पेमेंट संकलन नाही.\n\nNo any payment collection for today.</string>
    <string name="print">प्रिंट</string>
    <string name="wait_for_print">प्रिंटसाठी प्रतीक्षा करा.</string>
    <string name="printer_connecting">प्रिंटर कनेक्ट करत आहे.</string>
    <string name="printer_connected">प्रिंटर कनेक्ट केलेले आहे.</string>
    <string name="printer_done">प्रिंट पूर्ण झाली.</string>
    <string name="reciept_number">पावती क्र.</string>
    <string name="sq_fit">चौरस फूट</string>
    <string name="date">तारीख</string>
    <string name="footer_message">*पावतीची वैधता एक दिवसाची आहे.\n*ही एक सिस्टिम जनरेट केलेली पावती आहे, आणि कोणत्याही स्वाक्षरीची आवश्यकता नाही\n*ही पावती तुमच्याकडे सुरक्षित ठेवा.</string>
    <string name="footer_message1">*पावतीची वैधता एक दिवसाची आहे.</string>
    <string name="footer_message2">*ही एक सिस्टिम जनरेट केलेली पावती आहे,</string>
    <string name="footer_message3">आणि कोणत्याही स्वाक्षरीची आवश्यकता नाही.</string>
    <string name="footer_message4">*ही पावती तुमच्याकडे सुरक्षित ठेवा.</string>
    <string name="powered_by">Powered by :</string>
    <string name="printer_not_found">डेटा यशस्वीरित्या जतन झाला आहे, परंतु प्रिंटर उपलब्ध नाही.\nकृपया ब्लूटूथ सेटिंग चालू असल्याची खात्री करा.</string>
    <string name="printer_not_found_error">प्रिंटर उपलब्ध नाही.</string>
    <string name="reciept_reprint_title">पावती क्र. <b>%1$s</b> पुनर्मुद्रण</string>
    <string name="reciept_reprint_message">पावती क्र. <b>%1$s</b> डेटा यशस्वीरित्या जतन झाला आहे. प्रिंटसाठी प्रतीक्षा करा. प्रिंटमध्ये काही समस्या असल्यास कृपया पुनर्मुद्रण बटणावर क्लिक करा.</string>
    <string name="reciept_reprint_message1">पावती क्र. <b>%1$s</b> प्रिंटमध्ये काही समस्या असल्यास कृपया पुनर्मुद्रण बटणावर क्लिक करा.</string>
    <string name="reciept_reprint">पुनर्मुद्रण पावती</string>
    <string name="not_required">आवश्यक नाही</string>
    <string name="select_printer">प्रिंटर निवडा (Select Printer)</string>
    <string name="default_POS_printer">डीफॉल्ट प्रिंटर (Default printer)</string>
    <string name="externale_printer">बाह्य ब्लूटूथ प्रिंटर (External bluetooth printer)</string>
    <string name="re_printed">पुनर्मुद्रित (Reprinted)</string>
    <string name="printers_selected_sucessfuly">यशस्वीरित्या सेट केला आहे.</string>
    <string name="backup_data">Backup Data</string>
</resources>