<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_entry">

    <fragment
        android:id="@+id/nav_entry"
        android:name="com.example.ajspire.collection.ui.entry.EntryFragment"
        android:label="@string/menu_entry"
        tools:layout="@layout/fragment_entry" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ajspire.collection.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.ajspire.collection.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>