<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/llLoadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toast_backgrount_positive"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppFont.LabelSmall.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/syn_inprogress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMainContaint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtHeading"
            style="@style/AppFont.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/client_name" />

        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:scaleType="fitXY"
            android:src="@drawable/client_logo_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llPrintSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppFont.LabelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_printer"
                    android:textStyle="bold" />

                <com.example.ajspire.collection.ui.custom.RadioGridGroup
                    android:id="@+id/rgPrinterType"
                    style="@style/AppFont.LabelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/card_background"
                    android:columnCount="1"
                    android:elevation="@dimen/_8sdp"
                    android:padding="@dimen/_4sdp">

                    <RadioButton
                        android:id="@+id/rb_default_POS_printer"
                        style="@style/AppFont.LabelSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/default_POS_printer" />

                    <RadioButton
                        android:id="@+id/rb_externale_printer"
                        style="@style/AppFont.LabelSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/externale_printer" />


                </com.example.ajspire.collection.ui.custom.RadioGridGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@color/line" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSync"
                style="@style/AppFont.LabelMedium.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:padding="@dimen/_8sdp"
                android:text="@string/sync"
                android:textAllCaps="false" />


            <TextView
                style="@style/AppFont.LabelSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/powered_by"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/txtFooter"
                style="@style/AppFont.LabelSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/ajspire_tec" />

            <TextView
                android:id="@+id/txtBuild"
                style="@style/AppFont.XXLabelSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:textColor="@color/gray"
                tools:text="@string/ajspire_tec" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>