<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/txtHeading"
        style="@style/AppFont.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textStyle="bold"
        tools:text="@string/client_name" />

    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:scaleType="fitXY"
        android:src="@drawable/client_logo_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView

        style="@style/AppFont.LabelSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/powered_by" />

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtFooter"
        style="@style/AppFont.LabelSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center"
        tools:text="@string/ajspire_tec" />
</LinearLayout>